--- a/index.html
+++ b/index.html
@@ -5,8 +5,27 @@
 </head>
 <body>
 
-<h1>My First Heading</h1>
+<h1>205962IAIB</h1>
+ 
 <p>My first paragraph.</p>
 
 </body>
 </html>
+
+<table>
+  <tr>
+    <th>Company</th>
+    <th>Contact</th>
+    <th>Country</th>
+  </tr>
+  <tr>
+    <td>Alfreds Futterkiste</td>
+    <td>Maria Anders</td>
+    <td>Germany</td>
+  </tr>
+  <tr>
+    <td>Centro comercial Moctezuma</td>
+    <td>Francisco Chang</td>
+    <td>Mexico</td>
+  </tr>
+</table>
