--- a/index.html
+++ b/index.html
@@ -5,24 +5,24 @@
 </head>
 <body>
 
-<h1>205962IAIB</h1>
+<h1style="background-color:Gray;">>205962IAIB</h1>
  
-<p>My first paragraph.</p>
+<p style="background-color:LightGray;"> >My first paragraph.</p>
 
 </body>
 </html>
 
 <table>
-  <tr>
+  <tr style="background-color:DodgerBlue;"> 
     <th>Company</th>
     <th>Contact</th>
     <th>Country</th>
   </tr>
-  <tr>
+  <tr style="background-color:DodgerBlue;">
     <td>Alfreds Futterkiste</td>
     <td>Maria Anders</td>
     <td>Germany</td>
-  </tr>
+  </trstyle="background-color:DodgerBlue;">
   <tr>
     <td>Centro comercial Moctezuma</td>
     <td>Francisco Chang</td>
