--- a/index.html
+++ b/index.html
@@ -5,27 +5,27 @@
 </head>
 <body>
 
-<h1style="background-color:Gray;">>205962IAIB</h1>
+<h1 style="background-color:Gray;">205962IAIB</h1>
  
-<p style="background-color:LightGray;"> >My first paragraph.</p>
+<p style="background-color:LightGray;">My first paragraph.</p>
 
 </body>
 </html>
 
 <table>
-  <tr style="background-color:DodgerBlue;"> 
+  <tr style="border:2px solid DodgerBlue;"> 
     <th>Company</th>
     <th>Contact</th>
     <th>Country</th>
   </tr>
-  <tr style="background-color:DodgerBlue;">
+  <tr style="border:2px solid DodgerBlue;">
     <td>Alfreds Futterkiste</td>
     <td>Maria Anders</td>
     <td>Germany</td>
-  </trstyle="background-color:DodgerBlue;">
+  </tr style="border:2px solid DodgerBlue;">
   <tr>
     <td>Centro comercial Moctezuma</td>
     <td>Francisco Chang</td>
     <td>Mexico</td>
-  </tr>
+  </tr style="border:2px solid DodgerBlue;">
 </table>
