--- a/index.html
+++ b/index.html
@@ -13,19 +13,19 @@
 </html>
 
 <table>
-  <tr style="border:2px solid DodgerBlue;"> 
+  <tr style="background-color:StateBlue;"> 
     <th>Company</th>
     <th>Contact</th>
     <th>Country</th>
   </tr>
-  <tr style="border:2px solid DodgerBlue;">
+  <tr style="background-color:DodgerBlue;">
     <td>Alfreds Futterkiste</td>
     <td>Maria Anders</td>
     <td>Germany</td>
-  </tr style="border:2px solid DodgerBlue;">
+  </tr style="background-color:DodgerBlue;">
   <tr>
     <td>Centro comercial Moctezuma</td>
     <td>Francisco Chang</td>
     <td>Mexico</td>
-  </tr style="border:2px solid DodgerBlue;">
+  </tr style="background-color:DodgerBlue;">
 </table>
