--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 </body>
 </html>
-
+<h1 style="color:StateBlue;">Table xD</h1>
 <table>
   <tr style="background-color:StateBlue;"> 
     <th>Company</th>
