--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </body>
 </html>
 <h1 style="color:StateBlue;">Table xD</h1>
-<table>
+<table style="background-color:DodgerBlue;" >
   <tr style="background-color:StateBlue;"> 
     <th>Company</th>
     <th>Contact</th>
@@ -23,7 +23,7 @@
     <td>Maria Anders</td>
     <td>Germany</td>
   </tr style="background-color:DodgerBlue;">
-  <tr>
+  <tr style="background-color:DodgerBlue;">
     <td>Centro comercial Moctezuma</td>
     <td>Francisco Chang</td>
     <td>Mexico</td>
