--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 </head>
 <body>
 
-<h1 style="color:Gray;">205962IAIB</h1>
+<h1 style="color:Gray;">205962IAIB </h1> <a href="https://taltech.ee/"></a>
  
 <p style="background-color:LightGray;">My first paragraph.</p>
 
