--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Page Title</title>
+<title>HIGH PROTEIN WEBPAGE</title>
 </head>
 <body>
 
@@ -11,21 +11,21 @@
 
 </body>
 </html>
-<h1 style="color:StateBlue;">Table xD</h1>
-<table style="background-color:DodgerBlue;" >
+<h1 style="color:StateBlue;">BEST PROTEIN ON THE MARKET</h1>
+<table>
   <tr style="background-color:StateBlue;"> 
     <th>Company</th>
-    <th>Contact</th>
+    <th>Protein per 100g</th>
     <th>Country</th>
   </tr>
   <tr style="background-color:DodgerBlue;">
-    <td>Alfreds Futterkiste</td>
-    <td>Maria Anders</td>
-    <td>Germany</td>
+    <td>Iconfit</td>
+    <td>80g</td>
+    <td>Estonia</td>
   </tr style="background-color:DodgerBlue;">
   <tr style="background-color:DodgerBlue;">
-    <td>Centro comercial Moctezuma</td>
-    <td>Francisco Chang</td>
-    <td>Mexico</td>
+    <td>Arnold massive balls </td>
+    <td>99g</td>
+    <td>Kazakhstan</td>
   </tr style="background-color:DodgerBlue;">
 </table>
