--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
 </head>
 <body>
 
-<h1 style="color:Gray;">205962IAIB </h1> <a href="https://taltech.ee/"></a>
+<h1 style="color:Gray;">205962IAIB </h1> 
+<a href="https://taltech.ee/"></a>
  
 </body>
 </html>
