--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
  
 </body>
 </html>
-<h1 style="color:StateBlue;">BEST PROTEIN ON THE MARKET</h1>
+<h1  style="color:StateBlue;font-size:300%;"">BEST PROTEIN ON THE MARKET</h1>
 <table>
   <tr> 
     <th style="color:MediumSeaGreen;">Company</th>
