--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </html>
 <h1  style="color:MediumSeaGreen;font-size:300%;">BEST PROTEIN ON THE MARKET</h1>
 <table>
- <h1  style="color:MediumSeaGreen;font-size:50;">Protein per 100g of product: </h1>
+ <h1  style="color:MediumSeaGreen;font-size:150%;">Protein per 100g of product: </h1>
   <tr> 
     <th style="color:MediumSeaGreen;">Company</th>
     <th style="color:MediumSeaGreen;">Protein per 100g</th>
