--- a/index.html
+++ b/index.html
@@ -10,7 +10,11 @@
  
 </body>
 </html>
-<h1  style="color:MediumSeaGreen;font-size:300%;">BEST PROTEIN ON THE MARKET</h1>
+<h1  style="font-size:300%;">BEST PROTEIN ON THE MARKET</h1>
+<>
+<>
+<>
+<>
 <table>
  <h1  style="color:MediumSeaGreen;font-size:150%;">Protein per 100g of product: </h1>
   <tr> 
